@@ -1,147 +1,255 @@
 <?xml version="1.0"?>
 <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
 
-<xsd:simpleType name="EixXmlVersion">
-  <xsd:restriction base="xsd:integer">
-    <xsd:minInclusive value="@CURRENTXML@" />
-  </xsd:restriction>
-</xsd:simpleType>
+<xsd:annotation>
+	<xsd:documentation xml:lang="en">
+		This schema describes the output format which eix --xml produces.
+		The files eix-xml.html or eix-xml.txt provide a more informal description of this format.
+		This schema should give an accurate description; please file a bug if you
+		should observe that e.g. xmllint --schema eix-xml.xsd throws errors or warnings for the eix output.
+		The current version of the format is @CURRENTXML@.
+	</xsd:documentation>
+</xsd:annotation>
+
+<!-- Unfortunately, we must define things before we use them. -->
+<!-- So for humans, this file should be read from back to front. -->
+
+<!-- The following types are used for particular attributes -->
 
 <xsd:simpleType name="MaskType">
-  <xsd:restriction base="xsd:string">
-    <xsd:enumeration value="profile" />
-    <xsd:enumeration value="hard" />
-    <xsd:enumeration value="package_mask" />
-    <xsd:enumeration value="keyword" />
-    <xsd:enumeration value="missing_keyword" />
-    <xsd:enumeration value="alien_stable" />
-    <xsd:enumeration value="alien_unstable" />
-    <xsd:enumeration value="minus_asterisk" />
-    <xsd:enumeration value="minus_keyword" />
-  </xsd:restriction>
+	<xsd:restriction base="xsd:string">
+		<xsd:enumeration value="profile" />
+		<xsd:enumeration value="hard" />
+		<xsd:enumeration value="package_mask" />
+		<xsd:enumeration value="keyword" />
+		<xsd:enumeration value="missing_keyword" />
+		<xsd:enumeration value="alien_stable" />
+		<xsd:enumeration value="alien_unstable" />
+		<xsd:enumeration value="minus_asterisk" />
+		<xsd:enumeration value="minus_keyword" />
+	</xsd:restriction>
 </xsd:simpleType>
 
 <xsd:simpleType name="UnmaskType">
-  <xsd:restriction base="xsd:string">
-    <xsd:enumeration value="package_unmask" />
-    <xsd:enumeration value="package_keywords" />
-  </xsd:restriction>
+	<xsd:restriction base="xsd:string">
+		<xsd:enumeration value="package_unmask" />
+		<xsd:enumeration value="package_keywords" />
+	</xsd:restriction>
 </xsd:simpleType>
 
 <xsd:simpleType name="IuseDefault">
-  <xsd:restriction base="xsd:string">
-    <xsd:enumeration value="1" />
-    <xsd:enumeration value="-1" />
-  </xsd:restriction>
+	<xsd:restriction base="xsd:string">
+		<xsd:enumeration value="1" />
+		<xsd:enumeration value="-1" />
+	</xsd:restriction>
 </xsd:simpleType>
 
 <xsd:simpleType name="UseEnabled">
-  <xsd:restriction base="xsd:integer">
-    <xsd:minInclusive value="0" />
-    <xsd:maxInclusive value="1" />
-  </xsd:restriction>
+	<xsd:restriction base="xsd:integer">
+		<xsd:minInclusive value="0" />
+		<xsd:maxInclusive value="1" />
+	</xsd:restriction>
 </xsd:simpleType>
 
 <xsd:simpleType name="RestrictFlag">
-  <xsd:restriction base="xsd:string">
-    <xsd:enumeration value="binchecks" />
-    <xsd:enumeration value="strip" />
-    <xsd:enumeration value="test" />
-    <xsd:enumeration value="userpriv" />
-    <xsd:enumeration value="installsources" />
-    <xsd:enumeration value="fetch" />
-    <xsd:enumeration value="mirror" />
-    <xsd:enumeration value="bindist" />
-  </xsd:restriction>
+	<xsd:restriction base="xsd:string">
+		<xsd:enumeration value="binchecks" />
+		<xsd:enumeration value="strip" />
+		<xsd:enumeration value="test" />
+		<xsd:enumeration value="userpriv" />
+		<xsd:enumeration value="installsources" />
+		<xsd:enumeration value="fetch" />
+		<xsd:enumeration value="mirror" />
+		<xsd:enumeration value="bindist" />
+	</xsd:restriction>
 </xsd:simpleType>
 
 <xsd:simpleType name="PropertiesFlag">
-  <xsd:restriction base="xsd:string">
-    <xsd:enumeration value="interactive" />
-    <xsd:enumeration value="live" />
-    <xsd:enumeration value="virtual" />
-    <xsd:enumeration value="set" />
-  </xsd:restriction>
+	<xsd:restriction base="xsd:string">
+		<xsd:enumeration value="interactive" />
+		<xsd:enumeration value="live" />
+		<xsd:enumeration value="virtual" />
+		<xsd:enumeration value="set" />
+	</xsd:restriction>
 </xsd:simpleType>
+
+<!-- Now we define some types for elements with a StringList as content -->
 
 <xsd:simpleType name="StringList">
-  <xsd:list itemType="xsd:string" />
+	<xsd:list itemType="xsd:string" />
 </xsd:simpleType>
 
+<xsd:complexType name="Iuse">
+	<xsd:simpleContent>
+		<xsd:extension base="StringList">
+			<xsd:attribute name="default" type="IuseDefault">
+				<xsd:annotation>
+					<xsd:documentation xml:lang="en">
+						Specifies whether IUSE is by default enabled or disabled in the ebuild.
+					</xsd:documentation>
+				</xsd:annotation>
+			</xsd:attribute>
+		</xsd:extension>
+	</xsd:simpleContent>
+</xsd:complexType>
+
+<xsd:complexType name="Use">
+	<xsd:simpleContent>
+		<xsd:extension base="StringList">
+			<xsd:attribute name="enabled" type="UseEnabled" use="required">
+				<xsd:annotation>
+					<xsd:documentation xml:lang="en">
+						Specifies whether USE was enabled during emerge.
+					</xsd:documentation>
+				</xsd:annotation>
+			</xsd:attribute>
+		</xsd:extension>
+	</xsd:simpleContent>
+</xsd:complexType>
+
+<!-- Finally, we come to the main elements -->
+
 <xsd:complexType name="PackageVersion">
-  <xsd:sequence>
-    <xsd:element name="mask" minOccurs="0" maxOccurs="1">
-      <xsd:complexType>
-        <xsd:attribute name="type" type="MaskType" use="required" />
-      </xsd:complexType>
-    </xsd:element>
-    <xsd:element name="unmask" minOccurs="0" maxOccurs="1">
-      <xsd:complexType>
-        <xsd:attribute name="type" type="UnmaskType" use="required" />
-      </xsd:complexType>
-    </xsd:element>
-    <xsd:element name="iuse" minOccurs="0" maxOccurs="unbounded">
-      <xsd:complexType>
-        <xsd:simpleContent>
-          <xsd:extension base="StringList">
-            <xsd:attribute name="default" type="IuseDefault" />
-          </xsd:extension>
-        </xsd:simpleContent>
-      </xsd:complexType>
-    </xsd:element>
-    <xsd:element name="use" minOccurs="0" maxOccurs="unbounded">
-      <xsd:complexType>
-        <xsd:simpleContent>
-          <xsd:extension base="StringList">
-            <xsd:attribute name="enabled" type="UseEnabled" />
-          </xsd:extension>
-        </xsd:simpleContent>
-      </xsd:complexType>
-    </xsd:element>
-    <xsd:element name="restrict" minOccurs="0" maxOccurs="unbounded">
-      <xsd:complexType>
-        <xsd:attribute name="flag" type="RestrictFlag" use="required" />
-      </xsd:complexType>
-    </xsd:element>
-    <xsd:element name="properties" minOccurs="0" maxOccurs="unbounded">
-      <xsd:complexType>
-        <xsd:attribute name="flag" type="PropertiesFlag" use="required" />
-      </xsd:complexType>
-    </xsd:element>
-    <xsd:element name="keywords" type="StringList"  minOccurs="0" maxOccurs="unbounded"/>
-    <xsd:element name="normalized_keywords" type="StringList"  minOccurs="0" maxOccurs="unbounded"/>
-  </xsd:sequence>
-  <xsd:attribute name="id" type="xsd:string" use="required" />
-  <xsd:attribute name="overlay" type="xsd:string" />
-  <xsd:attribute name="repository" type="xsd:string" />
-  <xsd:attribute name="slot" type="xsd:string" />
-  <xsd:attribute name="installed" type="xsd:string" fixed="1" />
-  <xsd:attribute name="installDate" type="xsd:string" />
+	<xsd:annotation>
+		<xsd:documentation xml:lang="en">
+			This describes an available version of a package.
+		</xsd:documentation>
+	</xsd:annotation>
+	<xsd:sequence>
+		<xsd:element name="mask" minOccurs="0" maxOccurs="1">
+			<xsd:complexType>
+				<xsd:attribute name="type" type="MaskType" use="required" />
+			</xsd:complexType>
+		</xsd:element>
+		<xsd:element name="unmask" minOccurs="0" maxOccurs="1">
+			<xsd:annotation>
+				<xsd:documentation xml:lang="en">
+					This can occur only if the mask tag has occurred and
+					describes how the package has been unmasked locally.
+				</xsd:documentation>
+			</xsd:annotation>
+			<xsd:complexType>
+				<xsd:attribute name="type" type="UnmaskType" use="required" />
+			</xsd:complexType>
+		</xsd:element>
+		<xsd:element name="iuse" type="Iuse" minOccurs="0" maxOccurs="unbounded">
+			<xsd:annotation>
+				<xsd:documentation xml:lang="en">
+					This is a list of IUSE names listed in the ebuild.
+					Only the plain names (without "+" or "-") are listed.
+				</xsd:documentation>
+			</xsd:annotation>
+		</xsd:element>
+		<xsd:element name="use" type="Use" minOccurs="0" maxOccurs="unbounded">
+			<xsd:annotation>
+				<xsd:documentation xml:lang="en">
+					For installed versions, this is a list of USE flags which are
+					relevant for the installed version.
+				</xsd:documentation>
+			</xsd:annotation>
+		</xsd:element>
+		<xsd:element name="restrict" minOccurs="0" maxOccurs="unbounded">
+			<xsd:complexType>
+				<xsd:attribute name="flag" type="RestrictFlag" use="required" />
+			</xsd:complexType>
+		</xsd:element>
+		<xsd:element name="properties" minOccurs="0" maxOccurs="unbounded">
+			<xsd:complexType>
+				<xsd:attribute name="flag" type="PropertiesFlag" use="required" />
+			</xsd:complexType>
+		</xsd:element>
+		<xsd:element name="keywords" type="StringList" minOccurs="0" maxOccurs="unbounded">
+			<xsd:annotation>
+				<xsd:documentation xml:lang="en">
+					This is the KEYWORDS data of the ebuild.
+					Whether this is output depends on the XML_KEYWORDS variable.
+				</xsd:documentation>
+			</xsd:annotation>
+		</xsd:element>
+		<xsd:element name="normalized_keywords" type="StringList" minOccurs="0" maxOccurs="unbounded">
+			<xsd:annotation>
+				<xsd:documentation xml:lang="en">
+					This is the KEYWORDS data of the ebuild, modified by the profile.
+					Whether this is output depends on the XML_KEYWORDS variable.
+				</xsd:documentation>
+			</xsd:annotation>
+		</xsd:element>
+	</xsd:sequence>
+	<xsd:attribute name="id" type="xsd:string" use="required">
+		<xsd:annotation>
+			<xsd:documentation xml:lang="en">
+				The full version number (possibly including the revision number).
+				Note that this attribute is not necessarily unique for a package,
+				since the same version can occur in several overlays.
+				Hence, only the triple id/overlay/repository is unique.
+			</xsd:documentation>
+		</xsd:annotation>
+	</xsd:attribute>
+	<xsd:attribute name="overlay" type="xsd:string">
+		<xsd:annotation>
+			<xsd:documentation xml:lang="en">
+				The overlay is usually a path.
+				However, for virtual overlays this may be different.
+			</xsd:documentation>
+		</xsd:annotation>
+	</xsd:attribute>
+	<xsd:attribute name="repository" type="xsd:string">
+		<xsd:annotation>
+			<xsd:documentation xml:lang="en">
+				The repository name is the label of the overlay.
+				Usually, each overlay should have such a label stored in profiles/repo_name.
+				It can also be specified with --repo-name or REPO_NAMES during eix-update.
+			</xsd:documentation>
+		</xsd:annotation>
+	</xsd:attribute>
+	<xsd:attribute name="slot" type="xsd:string">
+		<xsd:annotation>
+			<xsd:documentation xml:lang="en">
+				The slot name; is only output if it is nonempty and different from 0.
+			</xsd:documentation>
+		</xsd:annotation>
+	</xsd:attribute>
+	<xsd:attribute name="installed" type="xsd:string" fixed="1">
+		<xsd:annotation>
+			<xsd:documentation xml:lang="en">
+				This attribute is only output if the version is installed.
+			</xsd:documentation>
+		</xsd:annotation>
+	</xsd:attribute>
+	<xsd:attribute name="installDate" type="xsd:string">
+		<xsd:annotation>
+			<xsd:documentation xml:lang="en">
+				The format of the date is determined by XML_DATE.
+				The installDate attribute is output if and only if the installed attribute
+				is output, i.e. if and only if the version is installed.
+			</xsd:documentation>
+		</xsd:annotation>
+	</xsd:attribute>
+</xsd:complexType>
+
+<xsd:complexType name="Package">
+	<xsd:sequence>
+		<xsd:element name="description" type="xsd:string" />
+		<xsd:element name="homepage" type="xsd:string" />
+		<xsd:element name="version" type="PackageVersion" minOccurs="0" maxOccurs="unbounded" />
+	</xsd:sequence>
+	<xsd:attribute name="name" type="xsd:string" use="required" />
+</xsd:complexType>
+
+<xsd:complexType name="Category">
+	<xsd:sequence>
+		<xsd:element name="package" type="Package" minOccurs="0" maxOccurs="unbounded" />
+	</xsd:sequence>
+	<xsd:attribute name="name" type="xsd:string" use="required" />
 </xsd:complexType>
 
 <xsd:element name="eixdump">
-  <xsd:complexType>
-    <xsd:sequence>
-      <xsd:element name="category" minOccurs="0" maxOccurs="unbounded">
-        <xsd:complexType>
-          <xsd:sequence>
-            <xsd:element name="package" minOccurs="0" maxOccurs="unbounded">
-              <xsd:complexType>
-                <xsd:sequence>
-                  <xsd:element name="description" type="xsd:string" />
-                  <xsd:element name="homepage" type="xsd:string" />
-                  <xsd:element name="version" type="PackageVersion" minOccurs="0" maxOccurs="unbounded" />
-                </xsd:sequence>
-                <xsd:attribute name="name" type="xsd:string" use="required" />
-              </xsd:complexType>
-            </xsd:element>
-          </xsd:sequence>
-          <xsd:attribute name="name" type="xsd:string" use="required" />
-        </xsd:complexType>
-      </xsd:element>
-    </xsd:sequence>
-    <xsd:attribute name="version" type="EixXmlVersion" use="required" />
-  </xsd:complexType>
+	<xsd:complexType>
+		<xsd:sequence>
+			<xsd:element name="category" type="Category" minOccurs="0" maxOccurs="unbounded" />
+		</xsd:sequence>
+		<xsd:attribute name="version" type="integer" fixed="<!-- <\!-- @CURRENTXML@ --> -->" use="required" />
+	</xsd:complexType>
 </xsd:element>
 
 </xsd:schema>
